# vehicle-diagnostics-node

./: .gitignore  CMakeLists.txt  LICENSE  README.md
buildroot/external-vehicle-node/: Config.in  external.desc  external.mk
buildroot/external-vehicle-node/configs/: vehicle_node_qemu_x86_64_defconfig
buildroot/external-vehicle-node/package/vehicle-node/: Config.in  vehicle-node.mk
buildroot/external-vehicle-node/package/vehicle-node/files/: vehicle-node.yaml
config/: vehicle-node.yaml
docs/: architecture.md  audio-cleanup-checklist.md  buildroot.md  interview-notes.md  workspace-summary.md  yocto.md
include/: VehicleNode.hpp
scripts/: build.sh  build_buildroot.sh  build_yocto.sh  install_service.sh  run_buildroot_qemu.sh  run_local.sh  run_yocto_qemu.sh  verify_buildroot.sh  verify_yocto_layer.sh
src/: CanCheck.cpp  Config.cpp  Logger.cpp  SystemInfo.cpp  VehicleNode.cpp  main.cpp
systemd/: vehicle-node.service
yocto/meta-vehicle-node/conf/: layer.conf
yocto/meta-vehicle-node/recipes-apps/vehicle-node/: vehicle-node_1.0.bb
yocto/meta-vehicle-node/recipes-apps/vehicle-node/files/: vehicle-node.yaml
yocto/meta-vehicle-node/recipes-core/images/: vehicle-node-image.bb
